--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,7 @@
    },
    "outputs": [],
    "source": [
-    "prob_5_6 = None\n",
+    "prob_5_6 = roll/d\n",
     "prob_5_6  # 0.3333333333333333"
    ]
   },
