Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,10 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "roll_dice = set([1,2,3,4,5,6])"
@@ -48,10 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "event = ([5,6])"
@@ -66,13 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'set' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-a7f1c1966ee6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprob_5_6\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mroll_dice\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprob_5_6\u001b[0m  \u001b[0;31m# 0.3333333333333333\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'set' and 'list'"
+     ]
+    }
+   ],
    "source": [
-    "prob_5_6 = roll/d\n",
+    "prob_5_6 = roll_dice/event\n",
     "prob_5_6  # 0.3333333333333333"
    ]
   },
