Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,7 @@
     }
    ],
    "source": [
-    "prob_5_6 = roll_dice/event\n",
+    "prob_5_6 = lenroll_dice/event\n",
     "prob_5_6  # 0.3333333333333333"
    ]
   },
