Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,23 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for /: 'set' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-a7f1c1966ee6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprob_5_6\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mroll_dice\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprob_5_6\u001b[0m  \u001b[0;31m# 0.3333333333333333\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'set' and 'list'"
-     ]
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "prob_5_6 = lenroll_dice/event\n",
+    "prob_5_6 = len(roll_dice)/len(event)\n",
     "prob_5_6  # 0.3333333333333333"
    ]
   },
