Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,22 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.0"
+       "0.3333333333333333"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prob_5_6 = len(roll_dice)/len(event)\n",
+    "prob_5_6 = len(event)/len(roll_dice)\n",
     "prob_5_6  # 0.3333333333333333"
    ]
   },
