Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -129,8 +129,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.random.seed(12345) # to make sure there is no randomness\n",
