--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    },
    "outputs": [],
    "source": [
-    "event_10 = np.random.randint(5,7,size=)\n",
+    "event_10 = np.random.randint(5,7,size=10)\n",
     "event_1k = None\n",
     "event_1m = None\n",
     "event_100m = None"
