Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,10 +156,10 @@
    },
    "outputs": [],
    "source": [
-    "event_10 = np.random.randint(5,7,size=10)\n",
-    "event_1k = None\n",
-    "event_1m = None\n",
-    "event_100m = None"
+    "event_10 = np.sum(dice_10>4)\n",
+    "event_1k = np.sum(dice_1k>4)\n",
+    "event_1m = np.sum(dice_1m>4)\n",
+    "event_100m = np.sum(dice_100m>4)"
    ]
   },
   {
