--- a/index.ipynb
+++ b/index.ipynb
@@ -169,17 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5, 0.331, 0.333657, 0.33329752)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prob_10 = None\n",
-    "prob_1k = None\n",
-    "prob_1m = None\n",
-    "prob_100m = None\n",
-    "prob_10, prob_1k, prob_1m, prob_100m  # 0.5 0.331 0.333657 0.33329752"
+    "prob_10 = event_10/10\n",
+    "prob_1k = event_1k/1000\n",
+    "prob_1m = event_1m/1000000\n",
+    "prob_100m = event_100m/100000000\n",
+    "prob_10, prob_1k, prob_1m, prob_100m"
    ]
   },
   {
