Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    },
    "outputs": [],
    "source": [
-    "P_afr = None\n",
+    "P_afr = Non\n",
     "P_ant = None\n",
     "P_as = None\n",
     "P_eur = None\n",
