--- a/index.ipynb
+++ b/index.ipynb
@@ -216,19 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "P_afr = Non\n",
-    "P_ant = None\n",
-    "P_as = None\n",
-    "P_eur = None\n",
-    "P_na = None\n",
-    "P_aus = None\n",
-    "P_sa = None"
+    "P_afr = 0.161\n",
+    "P_ant = 0.000\n",
+    "P_as = 0.598\n",
+    "P_eur = 0.1\n",
+    "P_na = 0.079\n",
+    "P_aus = 0.005\n",
+    "P_sa = 0.057"
    ]
   },
   {
