Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -271,14 +271,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def check_axioms(sample_space):\n",
-    "    None"
+    "    test_ax1a = (sample_space >= 0).all()\n",
+    "    test_ax1b = (sample_space <= 1 ).all()\n",
+    "    test_ax2 = np.sum(sample_space) == 1\n",
+    "    if (test_ax1a == True) & (test_ax1b == True) & (test_ax2 == True):\n",
+    "        return(\"We're good!\")\n",
+    "    else:\n",
+    "        return(\"Not quite!\")"
    ]
   },
   {
@@ -290,11 +294,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"We're good!\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "check_axioms(continents)"
    ]
