--- a/index.ipynb
+++ b/index.ipynb
@@ -321,10 +321,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_1 = np.array([0.05, 0.2, 0.3, 1.01])\n",
@@ -334,15 +332,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Not quite!'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
-    "None\n",
-    "None"
+    "check_axioms(test_1)"
    ]
   },
   {
