Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -387,13 +387,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(36, 2)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None # should be equal to (36,2)"
+    "sample_dice.shape"
    ]
   },
   {
