--- a/index.ipynb
+++ b/index.ipynb
@@ -493,8 +493,8 @@
    },
    "outputs": [],
    "source": [
-    "set_5 = Non\n",
-    "set_6 = None"
+    "set_5 = No\n",
+    "set_6 = sample_dice == 6"
    ]
   },
   {
