--- a/index.ipynb
+++ b/index.ipynb
@@ -493,7 +493,7 @@
    },
    "outputs": [],
    "source": [
-    "set_5 = No\n",
+    "set_5 = sample_dice == 5\n",
     "set_6 = sample_dice == 6"
    ]
   },
@@ -505,7 +505,7 @@
    },
    "outputs": [],
    "source": [
-    "set_5_6 = None"
+    "set_5_6 = "
    ]
   },
   {
