--- a/index.ipynb
+++ b/index.ipynb
@@ -487,10 +487,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "set_5 = sample_dice == 5\n",
@@ -499,13 +497,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "set_5_6 = "
+    "set_5_6 = set_5+set_6"
    ]
   },
   {
