--- a/index.ipynb
+++ b/index.ipynb
@@ -512,7 +512,7 @@
    },
    "outputs": [],
    "source": [
-    "set_any_5_6 = None\n",
+    "set_any_5_6 = np.any(set_5_6)\n",
     "print(set_any_5_6) "
    ]
   },
