--- a/index.ipynb
+++ b/index.ipynb
@@ -526,13 +526,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
-    "prob_5_6 = None\n",
+    "prob_5_6 = np.sum(set_any_5_6)\n",
     "print(prob_5_6)"
    ]
   },
