Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -557,7 +557,7 @@
    },
    "outputs": [],
    "source": [
-    "sum_dice = None\n",
+    "sum_dice = np.sum(sample_dice, axis=1)\n",
     "sum_8 = None"
    ]
   },
