--- a/index.ipynb
+++ b/index.ipynb
@@ -558,7 +558,7 @@
    "outputs": [],
    "source": [
     "sum_dice = np.sum(sample_dice, axis=1)\n",
-    "sum_8 = None"
+    "sum_8 = sum(sum_dice==8)"
    ]
   },
   {
