--- a/index.ipynb
+++ b/index.ipynb
@@ -561,13 +561,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1388888888888889\n"
+     ]
+    }
+   ],
    "source": [
-    "prob_sum_8 = None\n",
+    "prob_sum_8 = sum_8/len(sample_dice)\n",
     "print(prob_sum_8)"
    ]
   },
