Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -698,7 +698,7 @@
    },
    "outputs": [],
    "source": [
-    "num_F = None\n",
+    "num_F = np.sum(first_3_f)\n",
     "print(num_F)"
    ]
   },
