--- a/index.ipynb
+++ b/index.ipynb
@@ -692,13 +692,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 1 1 1 1 1 2 2 2 3 2 2 2 2 2 2 1 1 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "num_F = np.sum(first_3_f)\n",
+    "num_F = np.sum(first_3_F, axis=1)\n",
     "print(num_F)"
    ]
   },
