Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -716,7 +716,7 @@
    },
    "outputs": [],
    "source": [
-    "F_2plus = None\n",
+    "F_2plus = np.sum(num_F > 1)\n",
     "print(F_2plus)"
    ]
   },
